--- a/SI140A-hw5/HW05-sol.tex
+++ b/SI140A-hw5/HW05-sol.tex
@@ -144,6 +144,24 @@
 
 \begin{homeworkProblem}[1]
 
+\begin{enumerate}
+    \item As the treasure has equally probability to be in the realm from 1 to 9. Then we have that: \\
+    \begin{enumerate}
+        \item If treasure in realm 1, then we need to ask 1 questions. \\
+        \item If treasure in realm 2, then we need to ask 2 questions. \\
+        \item ...
+        \item If treasure in realm 9, then we need to ask 9 questions. \\
+    \end{enumerate}
+    Then we denote that event $X_i$ is that treasure in realm $i$. Then we have that: \\
+    $$P(X_i) = \dfrac{1}{9}.$$
+    Then we denote that $Y$ is the number of questions we need to ask. Then we have that: \\
+    $$P(Y = k) = P(X_k) = \dfrac{1}{9}$$
+    Then we have that: 
+    $$E(X_i) = 1 * \dfrac{1}{9} + 2 * \dfrac{1}{9} + ... + 9 * \dfrac{1}{9} = 5$$
+    \item 
+    By using the bisection method, as for cases that treasure in realm $\in [1, 5]$, will have probability of $\dfrac{5}{9}$ to continue find, as for realm $\in [6, 9]$, will have probability of $\dfrac{4}{9}$, to continue find. As for the first part, then 
+\end{enumerate}
+
 \end{homeworkProblem}
 
 \newpage
