--- a/SI140A-hw6/HW06-sol.tex
+++ b/SI140A-hw6/HW06-sol.tex
@@ -169,6 +169,12 @@ So we have that $E(A) = 1 + \sum_{i = 1}^{n - 1} P(B_i) = 1 + 2(n-1)p(1 - p). $
 
 \begin{homeworkProblem}[3]
     
+\begin{enumerate}
+    \item Fristly we need to consider let the last one be the tagged elk, then we need to make k-1 captures. We have
+        $$P(X = k) = \dfrac{\begin{pmatrix} n \\ m-1 \end{pmatrix}\begin{pmatrix} N-n \\ k \end{pmatrix}}{\begin{pmatrix} N \\ m+k-1 \end{pmatrix}} * \dfrac{n - (m - 1)}{N - (m - 1) - k}$$
+        Then the total number, we need to 
+\end{enumerate}
+
 \end{homeworkProblem}
 
 \newpage
@@ -180,6 +186,8 @@ So we have that $E(A) = 1 + \sum_{i = 1}^{n - 1} P(B_i) = 1 + 2(n-1)p(1 - p). $
 \newpage
 
 \begin{homeworkProblem}[5]
+
+To distribute the 14 balls into 5 boxes, we can use the 
 
 \end{homeworkProblem}
 
